--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,4 +1,4 @@
-siteTitle: Netlify CMS + React Starter
+siteTitle: Johnny Mohawk Blog
 siteUrl: 'https://netlify-cms-react-starter.netlify.com'
 siteDescription: >-
   A starter project for creating lightning-fast, offline-first websites with
