change image on social media card and title

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -4,7 +4,7 @@ siteDescription: >-
   A starter project for creating lightning-fast, offline-first websites with
   Netlify CMS and React.
 socialMediaCard:
-  image: /images/uploads/card-og.png
+  image: /images/uploads/JM-blog-BG1.jpg
   twitterCreatorAccount: '@Jinksi'
   twitterSiteAccount: ''
 headerScripts: |-
