--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "4.2.2",
     "react-router-dom": "^5.0.1",
-    "react-snapshot": "^1.3.0"
+    "react-snapshot": "^1.3.0",
+    "workbox-google-analytics": "^6.5.3"
   },
   "scripts": {
     "start": "npm-run-all prepare-content -p start:content start:app start:cms",
